trunk/Archive2/40/d45ab8549fafc0/output
main.cpp:1:2: error: #endif without #if
 #endif
  ^
main.cpp:3:11: warning: extra tokens at end of #undef directive
 #undef aaa;
           ^
